--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'com.google.code.gson:gson:2.9.0'
 }
