--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ android {
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-auth:21.0.3'
@@ -54,5 +54,6 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.6.3"
     implementation 'com.google.code.gson:gson:2.9.0'
 
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation group: 'com.apachat', name: 'loadingbutton-android', version: '1.0.11'
 }
